# powerAgen

./: .gitignore  PowerAgen_OpenExploration.md  PowerAgen_PRD_v2_1.md  README.md  chatgpt-connector-mock-2026-05-23.md  connector_mock_commit_test.md  pyproject.toml  requirements.txt
docs/: MVP_PROGRESS.md
poweragen/: __init__.py  agent.py  cli.py  evaluate.py  planner.py  renderer.py  template_compiler.py  utils.py  validator.py  web.py
test/: courseplan_test.pptx
tests/: test_mvp_pipeline.py
